<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarTarefaActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/editText_Nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText_Descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/editText_DataInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
             />
        <EditText
            android:id="@+id/editText_DataFim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
             />

        <Switch
            android:id="@+id/switch_tarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tarefa_realizada" />

        <Button
            android:id="@+id/button_Editar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar" />

        <Button
            android:id="@+id/button_Deletar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deletar" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>